# NeoPZExamples

./: CMakeLists.txt  README.md
F17DirectionalRefinement/: CMakeLists.txt  f17.cpp
ModalAnalysisWG/: CMakeLists.txt  ModalAnalysisWG.cpp  modalAnalysis.cpp
SpecialMaps/: CMakeLists.txt  specialmaps.cpp
Tutorial/: CMakeLists.txt
Tutorial/HCurl3D/: CMakeLists.txt  HCurl3D.cpp  TPZMatHCurl3D.cpp  TPZMatHCurl3D.h  hcurlmesh.msh  hcurlmesh.py
Tutorial/Poisson2D/: CMakeLists.txt  poisson.cpp
Tutorial/Projections/: CMakeLists.txt  HCurlProjection.cpp  HDivKernelProjection.cpp
